Made video embeds responsive

--- a/media.html
+++ b/media.html
@@ -130,22 +130,18 @@
                         <p>
                             Heb je toch meer nodig dan de visuele samenvatting om de inhoud te herinneren? We hebben live-captaties van alle sprekers. 
                         </p>
-                        <p>
-                          <iframe src="https://player.vimeo.com/video/234305186?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            <p><a href="https://vimeo.com/234305186">Foreplay keynote - Aral Balkan</a> from <a href="https://vimeo.com/foresightbydigipolis">Foresight by Digipolis</a> on <a href="https://vimeo.com">Vimeo</a>.</p>  
+                        <p> <!-- Aral Balkan -->
+                            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/234305186' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div> 
                         </p>
-                        <p>
-                            <iframe src="https://player.vimeo.com/video/234316956?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            <p><a href="https://vimeo.com/234316956">Foreplay keynote - Karl-Filip Coenegrachts</a> from <a href="https://vimeo.com/foresightbydigipolis">Foresight by Digipolis</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                        <p> <!-- Karl-Filip Coenegrachts -->
+                            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/234316956' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
                         </p>
 
-                        <p>
-                            <iframe src="https://player.vimeo.com/video/234316723?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            <p><a href="https://vimeo.com/234316723">Foreplay keynote - Maya Van Leemput</a> from <a href="https://vimeo.com/foresightbydigipolis">Foresight by Digipolis</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                        <p> <!-- Maya Van Leemput -->
+                            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/234316723' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
                         </p>
-                        <p>
-                            <iframe src="https://player.vimeo.com/video/234316533?byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            <p><a href="https://vimeo.com/234316533">Foreplay keynote - Maarten Hajer</a> from <a href="https://vimeo.com/foresightbydigipolis">Foresight by Digipolis</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                        <p> <!-- Maarten Hajer -->
+                            <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/234316533' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
                         </p>
                     </div>
                 </div>
