--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 Technology in the City of People
                             </h2>
                             <p>
-                             Foreplay inspireert, onderzoekt, speelt met en durft kritisch te zijn over de toekomst van mens, technologie en samenleving in Gent. Foreplay gaat niet over één, maar over diverse mogelijke toekomsten. Want verschillende scenario's zijn mogelijk: wat we vandaag beslissen, maakt mee de stad van morgen. Hoe willen we dat onze stad er uitziet, bijvoorbeeld in 2040? En wat is de plaats van technologie in die toekomsten?
+                             Foreplay inspireert, onderzoekt, speelt met en durft kritisch te zijn over de toekomst van mens, technologie en samenleving in Gent. Foreplay gaat niet over één, maar over diverse mogelijke toekomsten. Op 7 september 2017 nam de allereerste editie met 300 bezoekers plaats in De Bijloke in Gent . Deze website blijft als digitaal archief bestaan. Voor meer meer beelden en video’s van deze eerste editie, klik op onderstaande knop. 
                             </p>
                             <br>
                             <p class="extra-spacing">
@@ -149,7 +149,7 @@
                             <br>
                             <i class="fa fa-calendar fa-3x info-icon" style="padding-top: 1em;"></i>
                             <span class="info-nr">7</span>
-                            <span class="info-small">september</span>
+                            <span class="info-small">september 2017</span>
                             <br>
                             <i class="fa fa-map-marker fa-3x info-icon"></i>
                             <span class="info-small">De Bijloke</span>
@@ -163,6 +163,48 @@
             </div>
          </div>
      </div>
+        <div id="site-media" class="section bg-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-xs-10 col-xs-offset-1">
+                        <div class="row">
+                            <div class="col col-xs-12 col-sm-10 col-sm-offset-1">
+                                <h2 class="text-center">
+                                    Sfeerbeelden
+                                </h2>
+                                <h4 class="text-center">
+                                    Herbeleef de eerste editie van Foreplay: Technology in the City of People.
+                                </h4>
+                                <ul class="pgwSlider">
+                                    <li>
+                                        <img src="assets/pictures/pic1.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic2.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic3.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic4.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic5.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic6.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="assets/pictures/pic7.jpg">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    
     <div id="site-media">
         <div class="section bg-gradient"> 
             <div class="container">
@@ -487,42 +529,7 @@
             </div>
         </div>
     </div>
-    <!--
-    SLIDESHOW BLOCK
-
-        <div id="site-media" class="section bg-yellow">
-            <div class="container">
-                <div class="row">
-                    <div class="col col-xs-10 col-xs-offset-1">
-                        <div class="row">
-                            <div class="col col-xs-12 col-sm-10 col-sm-offset-1">
-                                <h2 class="text-center">
-                                    Slider
-                                </h2>
-                                <h4 class="text-center">
-                                    We also have a super cool slider / carousel. Just drop your images in as a list-item
-                                    in the ul.
-                                </h4>
-                                <ul class="pgwSlider">
-                                    <li>
-                                        <img src="assets/pictures/pic_1.jpg">
-                                    </li>
-                                    <li>
-                                        <img src="assets/pictures/pic_2.jpg">
-                                    </li>
-                                    <li>
-                                        <img src="assets/pictures/pic_3.jpg">
-                                    </li>
-                                    <li>
-                                        <img src="assets/pictures/pic_4.jpg">
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
+    
     <!--
     PROGRAMME BLOCK
 -->
