--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 Technology in the City of People
                             </h2>
                             <p>
-                             Foreplay inspireert, onderzoekt, speelt met en durft kritisch te zijn over de toekomst van mens, technologie en samenleving in Gent. Foreplay gaat niet over één, maar over diverse mogelijke toekomsten. Op 7 september 2017 nam de allereerste editie met 300 bezoekers plaats in De Bijloke in Gent . Deze website blijft als digitaal archief bestaan. Voor meer meer beelden en video’s van deze eerste editie, klik op onderstaande knop. 
+                             Foreplay inspireert, onderzoekt, speelt met en durft kritisch te zijn over de toekomst van mens, technologie en samenleving in Gent. Foreplay gaat niet over één, maar over diverse mogelijke toekomsten. Op 7 september 2017 nam de allereerste editie met 300 bezoekers plaats in De Bijloke in Gent . Deze website blijft als digitaal archief bestaan. Voor meer beelden en video’s van deze eerste editie, klik op onderstaande knop. 
                             </p>
                             <br>
                             <p class="extra-spacing">
