--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <link href="css/main.min.css" rel="stylesheet">
     <script type="application/ld+json">
         {
-            "@context": "http://schema.org",
+            "@context": "https://schema.org",
             "@type": "WebPage",
             "name": "Apps For X",
             "url": "https://github.com/openknowledgebe/AppsForXLight",
